--- a/index.css
+++ b/index.css
@@ -3,16 +3,32 @@ body {
   margin: 0;
   padding: 0;
 }
-
-.grid-container {
-  height: 100vh;
-  width: 100vw;
-  /* your properties here */
-}
-
 .grid-item {
   background-color: grey;
   border: 1px solid black;
 }
 
+
 /* add the .bigItem class */
+header {background-color: blueviolet;
+}
+.grid-container {
+  display: grid;
+  grid-auto-rows:  1fr 1fr 1fr;
+  grid-template-rows: [header-start] 1fr [header-end] 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 5px;
+  height: 100vh;
+  width: 100vw;
+}
+.bigItem {
+  grid-area: 2 / 2 / 4 / 4;
+  height: 50%;
+  width: 50%;
+  justify-self: center;
+  align-self: center;
+}
+
+/* your properties here */
+
+footer {grid-area: footer-start / 1 / footer-end / 4}
